--- a/www/package.json
+++ b/www/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "deep_learning": "file:../pkg"
   },
   "devDependencies": {
