--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rulinalg="0.4.2"
 wasm-bindgen = "0.2.63"
 console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
+rand = "0.8.4"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
