--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 rand = "0.8.4"
 plotters = "0.3.1"
+chrono = "0.4"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
