--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ chrono = "0.4"
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 mockall = "0.10.2"
+mockall_double = "0.2.0"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
