--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,40 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-default = ["console_error_panic_hook"]
-
 [dependencies]
 ndarray = "0.15.0"
 mnist = "0.4.1"
 rulinalg="0.4.2"
 wasm-bindgen = "0.2.63"
-console_error_panic_hook = { version = "0.1.6", optional = true }
-wee_alloc = { version = "0.4.5", optional = true }
+js-sys = "0.3"
 rand = "0.8.4"
+getrandom = { version = "0.2", features = ["js"] }
 plotters = "0.3.1"
 chrono = "0.4"
+image = { version = "0.23.14", default-features = false, features = [
+    "gif",
+    "jpeg",
+    #"jpeg_rayon", # WASMでサポートされていない
+    "ico",
+    "png",
+    "pnm",
+    "tga",
+    "tiff",
+    "webp",
+    "bmp",
+] }
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+  'CanvasRenderingContext2d',
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'Window',
+  'ImageData',
+]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
