--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,23 +12,14 @@ ndarray = "0.15.0"
 mnist = "0.4.1"
 rulinalg="0.4.2"
 wasm-bindgen = "0.2.63"
+wasm-bindgen-futures = "0.4.28"
 js-sys = "0.3"
 rand = "0.8.4"
 getrandom = { version = "0.2", features = ["js"] }
 plotters = "0.3.1"
 chrono = "0.4"
-image = { version = "0.23.14", default-features = false, features = [
-    "gif",
-    "jpeg",
-    #"jpeg_rayon", # WASMでサポートされていない
-    "ico",
-    "png",
-    "pnm",
-    "tga",
-    "tiff",
-    "webp",
-    "bmp",
-] }
+serde = { version = "1.0.80", features = ["derive"] }
+serde_derive = "^1.0.59"
 
 [dependencies.web-sys]
 version = "0.3"
@@ -40,6 +31,10 @@ features = [
   'HtmlCanvasElement',
   'Window',
   'ImageData',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
 ]
 
 [dev-dependencies]
