--- a/www/package.json
+++ b/www/package.json
@@ -11,9 +11,9 @@
     "chart.js": "^2.8.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "copy-webpack-plugin": "^5.0.0"
   }
 }
